# Chemical_formula_extraction

./: .dockerignore  .env copy  .gitignore  Dockerfile  README.md  docker-compose.yaml  get_img_from_pdf.py  pyproject.toml  test.py
backend/: .env copy  Dockerfile  docker-compose.yaml  run.sh  run.shell
backend/app/: .env copy  main.py
backend/app/api/: api.py
backend/app/api/routers/: health.py  servers.py  user.py  workflow.py
backend/app/clients/: azure_blob_client.py  azure_document_client.py  mineru_client.py  mongo_client.py  openai_client.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: README.md  servers.py
backend/app/services/process_pdf/: actions.py  chain.py  llm_actions.py  ocr_actions.py  upload_pdf.py  yolo_actions.py
backend/app/tasks/: README.md  celery_app.py  ocr_process_pdf.py  yolo_process_pdf.py
backend/app/tests/tasks/: tests_yolo_process_pdf.py
backend/app/utils/: rename.py
web/: app.js  index.html  styles.css
