[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-documentintelligence>=1.0.0",
    "azure-storage-blob>=12.28.0",
    "celery[mongodb]>=5.6.2",
    "fastapi[all]>=0.128.0",
    "loguru>=0.7.3",
    "mineru[all]>=2.7.1",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "temporalio>=1.21.1",
]
